GNOME Bugzilla – Bug 686294
tsdemux: Fix checking P-STD_buffer marker in PES header
Last modified: 2012-10-19 00:07:58 UTC
Check for P-STD_buffer marker is incorrect, which will cause all PES packets with P-STD_buffer_flag == 1 to be discarded.
Created attachment 226639 [details] [review] tsdemux: Fix parsing P-STD_buffer in PES header
Thanks, pushed! Plus a few others, which also looked wrong. commit 465374f3c8fd1dc2db3c79fe4de34636faedb18a Author: Tim-Philipp Müller <tim@centricular.net> Date: Fri Oct 19 01:03:51 2012 +0100 tsdemux: fix program packet sequence counter parsing in PES header commit 10c881b107f0541d40aae1a8bf203144bfb93bb9 Author: Tim-Philipp Müller <tim@centricular.net> Date: Fri Oct 19 00:47:45 2012 +0100 tsdemux: fix some inconsequential PES header parsing issues additional_copy_info: need to get rid of the highest bit, not the lowest one program_packet_sequence_counter: also need to get rid of the highest bit instead of multiplying with a random value original_stuff_length: want to AND 0x3f to extract the lowest 6 bits, not multiply by it. None of these fields are actually used though, so these should not have caused any issues. commit 96406696898665db36d0a4665a4629c89f45b54e Author: Raimo Järvi <raimo.jarvi@gmail.com> Date: Wed Oct 17 15:54:32 2012 +0300 tsdemux: Fix parsing P-STD_buffer in PES header https://bugzilla.gnome.org/show_bug.cgi?id=686294