tsdemux: Fix parsing P-STD_buffer in PES header

https://bugzilla.gnome.org/show_bug.cgi?id=686294